--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Config to MYSQL
 hibernate.id.db_structure_naming_strategy=single
-spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,7 +9,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-spring.jpa.open-in-view = false
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.generate-ddl=true
