--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "0.26.1",
     "bootstrap": "^5.2.0-beta1",
+    "date-fns": "^2.30.0",
     "react": "^17.0.2",
     "react-bootstrap": "2.2.2",
     "react-dom": "^17.0.2",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
