--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # dependencies
-/node_modules
+fullstack-fontend/node_modules
 /.pnp
 .pnp.js
 *.pack
 .cache
-/node_modules/.cache/default-development/
+fullstack-fontend/node_modules/.cache/default-development/
 
 # testing
 /coverage
