--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -20,8 +20,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "0.26.1",
+    "axios": "^0.26.1",
     "bootstrap": "^5.2.0-beta1",
+    "buffer": "^6.0.3",
+    "cloudinary": "^1.40.0",
+    "cloudinary-react": "^1.8.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "is-react": "^1.5.4",
     "react": "^17.0.2",
