--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -14,9 +14,10 @@
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.137",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.4",
     "@mui/styles": "^5.14.3",
     "@mui/x-data-grid": "^6.10.2",
+    "@mui/x-date-pickers": "^6.11.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -29,6 +30,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "is-react": "^1.5.4",
     "react": "^17.0.2",
     "react-bootstrap": "2.2.2",
