--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -20,9 +20,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@zxing/library": "^0.18.6",
     "axios": "0.26.1",
     "bootstrap": "^5.2.0-beta1",
     "date-fns": "^2.30.0",
+    "html5-qrcode": "^2.3.8",
     "is-react": "^1.5.4",
     "react": "^17.0.2",
     "react-bootstrap": "2.2.2",
