--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -18,6 +18,7 @@
     "@mui/styles": "^5.14.3",
     "@mui/x-data-grid": "^6.10.2",
     "@mui/x-date-pickers": "^6.11.1",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -76,5 +77,4 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
-  
 }
