--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -41,6 +41,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconify/react": "^4.1.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.103",
