--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -64,6 +64,7 @@
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.49.10",
     "simplebar-react": "^3.2.1",
     "web-vitals": "^3.1.1"
   },
