--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -45,10 +45,12 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
+    "@mui/x-date-pickers": "^6.16.2",
     "apexcharts": "^3.37.0",
     "axios": "^0.26.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.10",
     "history": "^5.3.0",
     "is-react": "^1.5.4",
     "lodash": "^4.17.21",
@@ -62,6 +64,8 @@
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.69.3",
     "simplebar-react": "^3.2.1",
     "web-vitals": "^3.1.1"
   },
