--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -44,6 +44,9 @@
     "@iconify/react": "^4.1.0",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/x-data-grid": "^6.10.2",
+    "@mui/x-data-grid-premium": "^6.16.2",
     "apexcharts": "^3.37.0",
     "axios": "^0.26.1",
     "change-case": "^4.1.2",
@@ -54,12 +57,14 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "2.2.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "8.2.0",
     "simplebar-react": "^3.2.1",
     "web-vitals": "^3.1.1"
   },
