--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -48,6 +48,7 @@
     "@mui/x-date-pickers": "^6.16.2",
     "apexcharts": "^3.37.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.3.2",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.10",
