--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconify/react": "^4.1.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
@@ -62,6 +63,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.10.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.49.10",
