--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -42,6 +42,7 @@
     "@emotion/styled": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
     "@iconify/react": "^4.1.0",
+    "@mui/icons-material": "^5.14.15",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
     "apexcharts": "^3.37.0",
@@ -57,6 +58,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-paginate": "^8.2.0",
