--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -50,6 +50,7 @@
     "@mui/material": "^5.11.10",
     "apexcharts": "^3.37.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.3.2",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
