--- a/material-kit-react-main/material-kit-react-main/package.json
+++ b/material-kit-react-main/material-kit-react-main/package.json
@@ -61,12 +61,14 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.49.10",
     "simplebar-react": "^3.2.1",
     "web-vitals": "^3.1.1"
