--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.format_sql=true
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
