--- a/fullstack-backend/pom.xml
+++ b/fullstack-backend/pom.xml
@@ -88,6 +88,12 @@
             <version>3.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
