--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
 spring.datasource.username=sa
