--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -23,7 +23,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@zxing/library": "^0.18.6",
     "axios": "0.26.1",
-    "bootstrap": "^5.2.0-beta1",
+    "bootstrap": "^5.2.0",
     "buffer": "^6.0.3",
     "cloudinary": "^1.40.0",
     "cloudinary-react": "^1.8.1",
@@ -76,5 +76,4 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
-  
 }
