--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -16,4 +16,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # Enabling H2 Console
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+# CORS configuration
+cors.allowed-origins=http://localhost:3000
+cors.allowed-methods=GET,POST,PUT,DELETE
+cors.allowed-headers=Content-Type
+cors.allow-credentials=true
