--- a/material-kit-react-main/package.json
+++ b/material-kit-react-main/package.json
@@ -51,6 +51,7 @@
     "apexcharts": "^3.37.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.3.2",
+    "browserify-zlib": "^0.2.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
