--- a/material-kit-react-main/package.json
+++ b/material-kit-react-main/package.json
@@ -49,10 +49,11 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
     "apexcharts": "^3.37.0",
-    "axios": "^0.26.1",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "browserify-zlib": "^0.2.0",
     "change-case": "^4.1.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
     "is-react": "^1.5.4",
@@ -68,7 +69,7 @@
     "react-icons": "^4.10.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "sass": "^1.49.10",
     "simplebar-react": "^3.2.1",
     "web-vitals": "^3.1.1"
