--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=Vudangduy1206
+spring.datasource.username=sa
+spring.datasource.password=123456
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.hibernate.SQL=DEBUG
@@ -13,20 +13,11 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.format_sql=true
-<<<<<<< HEAD
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-=======
 # Enabling H2 Console
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-<<<<<<< HEAD
-
->>>>>>> origin/nghiant0807
-=======
 # CORS configuration
 cors.allowed-origins=http://localhost:3000
 cors.allowed-methods=GET,POST,PUT,DELETE
 cors.allowed-headers=Content-Type
 cors.allow-credentials=true
->>>>>>> origin/nghiant0807
