--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -21,3 +21,10 @@ cors.allowed-origins=http://localhost:3000
 cors.allowed-methods=GET,POST,PUT,DELETE
 cors.allowed-headers=Content-Type
 cors.allow-credentials=true
+
+# Mail Sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=5fstore.contact@gmail.com
+spring.mail.password=ngojramzarxfphkw
+
