--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
-spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
 spring.datasource.username=sa
 spring.datasource.password=123456
 
