--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
-spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
-spring.datasource.username=sa
+#Connect to MySQL
+hibernate.id.db_structure_naming_strategy=single
+
+spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,9 +16,11 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.format_sql=true
+
 # Enabling H2 Console
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 # CORS configuration
 cors.allowed-origins=http://localhost:3000
 cors.allowed-methods=GET,POST,PUT,DELETE
