--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 #Connect to MySQL
 hibernate.id.db_structure_naming_strategy=single
 
-spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
+spring.datasource.username=sa
 spring.datasource.password=123456
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
