--- a/material-kit-react-main/.vscode/launch.json
+++ b/material-kit-react-main/.vscode/launch.json
@@ -2,7 +2,7 @@
   "configurations": [
     {
       "type": "node",
-      "name": "vscode-jest-tests.v2",
+      "name": "vscode-jest-tests.v2-1700315958731",
       "request": "launch",
       "args": [
         "test",
@@ -15,6 +15,27 @@
         "${jest.testFile}"
       ],
       "cwd": "h:\\J7_5F\\material-kit-react-main\\material-kit-react-main",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true,
+      "runtimeExecutable": "yarn",
+      "protocol": "inspector"
+    },
+    {
+      "type": "node",
+      "name": "vscode-jest-tests.v2",
+      "request": "launch",
+      "args": [
+        "test",
+        "test",
+        "--runInBand",
+        "--watchAll=false",
+        "--testNamePattern",
+        "${jest.testNamePattern}",
+        "--runTestsByPath",
+        "${jest.testFile}"
+      ],
+      "cwd": "h:\\J7_5F\\material-kit-react-main",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
