--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -48,6 +48,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
+    "@mui/x-data-grid": "^6.10.2",
     "@mui/x-date-pickers": "^6.18.1",
     "apexcharts": "^3.37.0",
     "axios": "^1.6.1",
@@ -65,6 +66,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
@@ -73,7 +75,8 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.49.10",
     "simplebar-react": "^3.2.1",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "react-qr-scanner": "^1.0.0-alpha.11"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
