--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ fullstack-fontend/node_modules
 .pnp.js
 *.pack
 .cache
-fullstack-fontend/node_modules/.cache/default-development/
+fullstack-fontend/node_modules/.cache
+fullstack-fontend/node_modules/@fortawesome
 
 # testing
 /coverage
