--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -71,12 +71,13 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "sass": "^1.49.10",
     "simplebar-react": "^3.2.1",
-    "web-vitals": "^3.1.1",
-    "react-qr-scanner": "^1.0.0-alpha.11"
+    "web-vitals": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
