--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -70,6 +70,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.8.1",
