--- a/fullstack-fontend/package.json
+++ b/fullstack-fontend/package.json
@@ -65,6 +65,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.2.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
