sort and search in product page

--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 hibernate.id.db_structure_naming_strategy=single
 
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
-spring.datasource.username=sa
+spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
