--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 hibernate.id.db_structure_naming_strategy=single
 
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.username=root
+spring.datasource.password=Vudangduy1206
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.hibernate.SQL=DEBUG
