--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ fullstack-fontend/node_modules/@fortawesome
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+fullstack-fontend/.idea/workspace.xml
