--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ fullstack-fontend/node_modules/
 .cache
 fullstack-backend/.idea/
 fullstack-backend/target/
-.idea
 # testing
 /coverage
 
@@ -23,9 +22,10 @@ fullstack-backend/target/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-fullstack-fontend/.idea
-fullstack-fontend/.vscode
+fullstack-fontend/.idea/
+fullstack-fontend/.vscode/
 /fullstack-fontend/node_modules/
 /fullstack-fontend/node_modules/.cache/
 /fullstack-fontend/node_modules/.cache/default-development/
 /fullstack-fontend/node_modules/@fortawesome/
+/.idea/
