--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 #Connect to MySQL
-hibernate.id.db_structure_naming_strategy=single
+#hibernate.id.db_structure_naming_strategy=single
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
@@ -28,7 +28,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 fontend.url=http://localhost:3000
 fontend.allowed-methods=GET,POST,PUT,DELETE
 fontend.allowed-headers=Content-Type
-fontend.allow-credentials=true
+#fontend.allow-credentials=true
 
 # Mail Sender
 spring.mail.host=smtp.gmail.com
