--- a/fullstack-fontend/public/manifest.json
+++ b/fullstack-fontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Minimal App",
-  "name": "React Material Minimal UI Kit",
+  "short_name": "5F Store",
+  "name": "5F Store",
   "icons": [
     {
       "src": "favicon/android-chrome-192x192.png",
