--- a/fullstack-backend/Dockerfile
+++ b/fullstack-backend/Dockerfile
@@ -1,7 +1,9 @@
+#FROM openjdk:17
 #ARG JAR_FILE=target/*.jar
 #COPY ${JAR_FILE} app.jar
 #EXPOSE 8080
 #ENTRYPOINT ["java","-jar","/app.jar"]
+
 FROM openjdk:17
 WORKDIR /app
 COPY .mvn/ .mvn
