--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
 
 spring.datasource.username=root
-spring.datasource.password=Vudangduy1206
+spring.datasource.password=123456
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,8 +17,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.jpa.open-in-view=true
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.format_sql=true
 
 # Enabling H2 Console
 #spring.h2.console.enabled=true
