--- a/fullstack-backend/src/main/resources/application.properties
+++ b/fullstack-backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 spring.datasource.url=jdbc:mysql://localhost:3306/duan_5f?autoReconnect=true&useSSL=false
 
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Vudangduy1206
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
